tests/paczka2/big_fuzzy/59049583.err
Error in line 4: S683 A899 75,0
Error in line 8: rVgxz S683 60,5
Error in line 9: rVgxz S520 74,8
Error in line 11: j98jE A899 45,6
Error in line 17: j98jE S373 57,1
Error in line 24: j98jE S683 7,0
Error in line 27: j98jE S373 16,9
Error in line 38: S683 S520 92,1
Error in line 68: rVgxz S520 79,0
Error in line 70: rVgxz S373 37,6
Error in line 71: rVgxz S683 83,6
Error in line 80: S683 S683 64,9
Error in line 78: rVgxz S373 7,9
Error in line 83: S683 A899 20,2
Error in line 85: rVgxz S520 64,4
Error in line 40: GdOv1vjRNsK S520 15,8
Error in line 93: qE9xgGhug2y A899 81,4
Error in line 102: j98jE S373 90,3
Error in line 90: S683 S683 28,9
Error in line 126: IYo S520 29,79
Error in line 124: j98jE S683 85,3
Error in line 127: rVgxz S520 375,4
Error in line 133: S683 S683 49,1
Error in line 135: S683 S520 89,2
Error in line 140: S683 S373 70,0
Error in line 151: j98jE A899 189,6
Error in line 146: bZY S520 41,7
Error in line 170: bZY S683 89,2
Error in line 190: GdOv1vjRNsK S373 7,2
Error in line 193: S683 S520 5,2
Error in line 211: S683 S683 45,65
Error in line 202: j98jE S683 7,1
Error in line 223: rVgxz S520 20,2
Error in line 236: qE9xgGhug2y A899 53,3
Error in line 237: qE9xgGhug2y S520 92,3
Error in line 228: rVgxz S373 64,6
Error in line 242: rVgxz S520 2,4
